Update release notes and faq in preparation of 3.0.3 and 2.2.14 release